--- a/style.css
+++ b/style.css
@@ -6,3 +6,123 @@
     --color-warning: #fbbe23 ;
     --color-error: #f87171 ;
 }
+
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+    max-width: 1000px;
+    margin: auto;
+}
+
+.container {
+    width: 100%;
+    margin: 40px auto 40px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.3);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+}
+
+h2 {
+    font-size: 1.5rem;
+    margin-bottom: 30px;
+}
+
+.input-section {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 40px;
+}
+
+.input-section input {
+    margin-right: 10px;
+    width: 100%;
+    border: 1px solid var(--color-primary);
+    border-radius: 5px;
+    padding: 10px;
+    color: gray;
+    transition: all 0.5s;
+}
+
+.input-section input:focus {
+    outline: none;
+    border-width: 2px;
+    transition: all 0.5s;
+}
+
+button {
+    background-color: var(--color-primary);
+    border: none;
+    cursor: pointer;
+    padding: 10px 15px;
+    border-radius: 5px;
+    transition: all 0.5s;
+}
+
+button:hover {
+    opacity: 0.8;
+    transition: all 0.5s;
+}
+
+.todos-operator {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+#delete-all-buttton {
+    background-color: var(--color-error);
+}
+
+table {
+    width: 100%;
+}
+
+thead {
+    background-color: var(--color-background);
+}
+
+thead th {
+    padding: 10px;
+}
+
+thead th:first-child {
+    border-top-left-radius: 10px;
+}
+
+thead th:last-child {
+    border-top-right-radius: 10px;
+}
+
+tbody td {
+    background-color: var(--color-task);
+    padding: 5px 10px;
+    text-align: center;
+}
+
+tbody td button {
+    padding: 4px 8px;
+    margin: 2px 5px;
+}
+
+tbody td button:nth-child(1) {
+    background-color: var(--color-warning);
+}
+
+tbody td button:nth-child(2) {
+    background-color: var(--color-success);
+}
+
+tbody td button:nth-child(3) {
+    background-color: var(--color-error);
+}
+
