--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
     --color-primary: #f9d72f;
     --color-background: #e6e6e6 ;
